--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -12,8 +12,11 @@
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-notifications": "^1.7.2",
     "react-scripts": "^4.0.3",
     "sass": "^1.35.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
