--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.20",
+    "@iconscout/react-unicons": "^1.1.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/axios": "^0.14.0",
     "axios": "^0.21.1",
+    "evergreen-ui": "^6.0.1",
+    "graphql": "^15.5.1",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
@@ -15,8 +19,7 @@
     "react-notifications": "^1.7.2",
     "react-scripts": "^4.0.3",
     "sass": "^1.35.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
+    "subscriptions-transport-ws": "^0.9.19",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
