--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-notifications": "^1.7.2",
     "react-scripts": "^4.0.3",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.35.1",
     "subscriptions-transport-ws": "^0.9.19",
     "web-vitals": "^1.1.2"
