--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -3,18 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.3.20",
+    "@apollo/client": "^3.3.16",
+    "@apollo/react-hooks": "^4.0.0",
     "@iconscout/react-unicons": "^1.1.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/axios": "^0.14.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-ws": "^1.0.20",
     "axios": "^0.21.1",
     "evergreen-ui": "^6.0.1",
     "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-notifications": "^1.7.2",
     "react-scripts": "^4.0.3",
