--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -23,6 +23,7 @@
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-notifications": "^1.7.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.21",
     "sass": "^1.35.1",
