--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -19,9 +19,11 @@
     "graphql-tag": "^2.12.5",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
