--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -25,8 +25,10 @@
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-notifications": "^1.7.2",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-table": "^7.7.0",
     "react-tooltip": "^4.2.21",
     "sass": "^1.35.1",
     "subscriptions-transport-ws": "^0.9.19",
