--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -15,6 +15,7 @@
     "apollo-link-ws": "^1.0.20",
     "axios": "^0.21.1",
     "evergreen-ui": "^6.0.1",
+    "form-data": "^3.0.1",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
     "mobx": "^6.3.2",
