--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
+    "aws-sdk": "^2.944.0",
+    "boom": "^7.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -21,7 +21,10 @@
     "jade": "^0.29.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "uuid": "^3.3.2"
   }
 }
