--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -9,5 +9,6 @@ services:
     restart: always
     # env_file: ./server/.env # TODO - uncomment this to auto-load your .env file!
     environment:
+      - CLIENT_URL=http://localhost:9000
       NODE_ENV: production
       PORT: 9000
