--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -10,7 +10,7 @@ services:
     restart: always
     # env_file: ./server/.env # TODO - uncomment this to auto-load your .env file!
     environment:
-      - API_URL=http://45.10.110.58:9000/api
+      - API_URL=http://45.10.110.58:9000/api/
       - CLIENT_URL=http://45.10.110.58:9000
       # NODE_ENV: production
       # PORT: 9000
