--- a/server/.prod.env
+++ b/server/.prod.env
@@ -12,4 +12,6 @@ S3_ENDPOINT=s3.yandexcloud.net
 S3_BUCKET=piek-factory
 
 
-CORS_CLIENT_URL=http://localhost:3000
+CORS_CLIENT_URL=https://45.10.110.58:9000
+REACT_APP_API_URL=https://45.10.110.58:9000/api
+REACT_APP_HASURA_WS=wss://45.10.110.58:8080/v1/graphql
