--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -5,12 +5,14 @@ services:
   web:
     container_name: 'piek-erp-prod'
     build: .
+      args: 
+        - REACT_APP_API_URL=https://45.10.110.58:9000/api
+        - REACT_APP_HASURA_WS=wss://45.10.110.58:8080/v1/graphql
     ports:
       - "9000:9000"
     restart: always
     # env_file: ./server/.env # TODO - uncomment this to auto-load your .env file!
     # env_file: server/.prod.env
     environment: 
+      - NODE_ENV=production
       - CORS_CLIENT_URL=https://45.10.110.58:9000
-      - REACT_APP_API_URL=https://45.10.110.58:9000/api
-      - REACT_APP_HASURA_WS=wss://45.10.110.58:8080/v1/graphql
