--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -4,7 +4,8 @@ version: '3'
 services:
   web:
     container_name: 'piek-erp-prod'
-    build: .
+    build:
+      context: .
       args: 
         - REACT_APP_API_URL=https://45.10.110.58:9000/api
         - REACT_APP_HASURA_WS=wss://45.10.110.58:8080/v1/graphql
