--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -7,6 +7,7 @@ services:
     build:
       context: .
       args: 
+        # переменные для сборки бандла реакт
         - REACT_APP_API_URL=https://45.10.110.58:9000/api
         - REACT_APP_HASURA_WS=wss://45.10.110.58:8080/v1/graphql
     ports:
