--- a/client/piek/.env
+++ b/client/piek/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://45.10.110.58:9000/api
+REACT_APP_API_URL=https://factory.piek.ru/api
 REACT_APP_HASURA_WS=wss://hasura.piek.ru/v1/graphql
