--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.3.16",
     "@apollo/react-hooks": "^4.0.0",
     "@iconscout/react-unicons": "^1.1.6",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,7 +15,9 @@
     "apollo-client": "^2.6.10",
     "apollo-link-ws": "^1.0.20",
     "axios": "^0.21.1",
+    "bower": "^1.8.12",
     "evergreen-ui": "^6.0.1",
+    "file-saver": "^2.0.5",
     "form-data": "^3.0.1",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
@@ -24,6 +27,7 @@
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-moment": "^1.1.1",
     "react-notifications": "^1.7.2",
     "react-responsive": "^8.2.0",
