--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       - /app/node_modules
     environment: 
       - REACT_APP_API_URL=http://localhost:9000/api
-      - REACT_APP_HASURA_WS=ws://45.10.110.58:8080/v1/graphql 
+      - REACT_APP_HASURA_WS=ws://hasura.piek.ru/v1/graphql 
     depends_on:
       - server
     ports:
