--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "multer-s3": "^2.9.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
+    "querystring": "^0.2.0",
     "uuid": "^3.3.2"
   }
 }
