--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -14,3 +14,6 @@ services:
     environment: 
       - NODE_ENV=production
       - CORS_CLIENT_URL=https://45.10.110.58:9000
+
+      - REACT_APP_API_URL=https://factory.piek.ru:9000/api
+      - REACT_APP_HASURA_WS=ws://factory.piek.ru:8080/v1/graphql
