--- a/client/piek/.env
+++ b/client/piek/.env
@@ -2,10 +2,10 @@
 
 # APP BUILD ENVIROUPMENT
 
-# REACT_APP_API_URL=https://factory.piek.ru/api
-# REACT_APP_HASURA_WS=wss://hasura.piek.ru/v1/graphql
+REACT_APP_API_URL=https://factory.piek.ru/api
+REACT_APP_HASURA_WS=wss://hasura.piek.ru/v1/graphql
 
 # LOCAL DEV ENVIROUPMENT
 
-REACT_APP_API_URL=http://localhost:9000/api
-REACT_APP_HASURA_WS=ws://45.10.110.58:8080/v1/graphql
+# REACT_APP_API_URL=http://localhost:9000/api
+# REACT_APP_HASURA_WS=ws://45.10.110.58:8080/v1/graphql
