--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -21,6 +21,7 @@
     "form-data": "^3.0.1",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
+    "jsonwebtoken": "^8.5.1",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "moment": "^2.29.1",
