--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -7,6 +7,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@iconscout/react-unicons": "^1.1.6",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "*",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
