--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -33,6 +33,7 @@
     "react-dropzone": "^11.3.4",
     "react-moment": "^1.1.1",
     "react-notifications": "^1.7.2",
+    "react-notifications-component": "^3.1.0",
     "react-number-format": "^4.7.3",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
