--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@apollo/client": "^3.3.16",
     "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@iconscout/react-unicons": "^1.1.6",
-    "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "*",
+    "@mui/material": "^5.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -32,7 +34,6 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-moment": "^1.1.1",
-    "react-notifications": "^1.7.2",
     "react-notifications-component": "^3.1.0",
     "react-number-format": "^4.7.3",
     "react-responsive": "^8.2.0",
