mui global update and checklist on comments

--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@apollo/client": "^3.3.16",
     "@apollo/react-hooks": "^4.0.0",
-    "@emotion/react": "^11.4.1",
+    "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@iconscout/react-unicons": "^1.1.6",
-    "@material-ui/lab": "*",
-    "@mui/material": "^5.0.1",
+    "@mui/material": "^5.0.4",
+    "@mui/styled-engine-sc": "^5.0.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -17,18 +17,19 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-ws": "^1.0.20",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bower": "^1.8.12",
-    "evergreen-ui": "^6.0.1",
     "file-saver": "^2.0.5",
     "form-data": "^3.0.1",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mobx": "^6.3.2",
     "mobx-react-lite": "^3.2.0",
     "moment": "^2.29.1",
+    "npm": "^8.1.0",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
@@ -42,6 +43,7 @@
     "react-table": "^7.7.0",
     "react-tooltip": "^4.2.21",
     "sass": "^1.35.1",
+    "styled-components": "^5.3.3",
     "subscriptions-transport-ws": "^0.9.19",
     "web-vitals": "^1.1.2"
   },
