--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "querystring": "^0.2.0",
+    "utf8": "^3.0.0",
     "uuid": "^3.3.2"
   }
 }
