--- a/client/piek/package.json
+++ b/client/piek/package.json
@@ -32,6 +32,7 @@
     "npm": "^8.1.0",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-moment": "^1.1.1",
