--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ client/piek/node_modules/
 # Ignore Mac DS_Store files
 .DS_Store
 **/.DS_Store
+client/piek/build/env-config.js
+client/piek/public/env-config.js
+client/piek/public/env-config.js
