--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -9,6 +9,6 @@ services:
       - "9000:9000"
     restart: always
     # env_file: ./server/.env # TODO - uncomment this to auto-load your .env file!
-    env_file: ./server/.prod.env
+    env_file: ./server/.env.production
     environment: 
       - NODE_ENV=production
