--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 server/node_modules/
 client/piek/node_modules/
 # Ignore Mac DS_Store files
-.DS_Store
+*/.DS_Store
 **/.DS_Store
 client/piek/build/env-config.js
 client/piek/public/env-config.js
 client/piek/public/env-config.js
+.vscode/
