server docker enviropment variables

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -10,8 +10,8 @@ services:
       - "9000:9000"
     restart: always
     # env_file: ./server/.env # TODO - uncomment this to auto-load your .env file!
-    # env_file: server/.prod.env
+    env_file: .env.production
     environment: 
       - NODE_ENV=production
-      - CORS_CLIENT_URL=https://45.10.110.58:9000
-      - REACT_APP_API_URL=https://factory.piek.ru:9000/api
+      # - CORS_CLIENT_URL=https://45.10.110.58:9000
+      # - REACT_APP_API_URL=https://factory.piek.ru:9000/api
