--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -4,7 +4,7 @@ services:
     web:
         container_name: 'piek-erp-prod'
         build:
-        context: .
+            context: .
         ports:
         - "9000:9000"
         restart: always
@@ -13,7 +13,7 @@ services:
         - NODE_ENV=production
         - CORS_CLIENT_URL=https://45.10.110.58:9000
         - REACT_APP_API_URL=https://factory.piek.ru:9000/api
-        command: >
-            bash -c "pm2 delete backup_service
-            && pm2 start backup_service/backup_service.config.js 
-            && pm2 save"
+        # command: >
+        #     bash -c "pm2 delete backup_service
+        #     && pm2 start backup_service/backup_service.config.js 
+        #     && pm2 save"
