--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,7 @@ FROM node:16-alpine3.11
 WORKDIR /app/client
 COPY package.json /app/client
 COPY package-lock.json /app/client
+COPY ../.env .
 
 RUN npm install
 
