--- a/client/piek/.env.production
+++ b/client/piek/.env.production
@@ -2,3 +2,5 @@ REACT_APP_NODE_ENV=production
 
 REACT_APP_API_URL=https://factory.piek.ru/api
 REACT_APP_HASURA_ENDPOINT=hasura.piek.ru/v1/graphql
+
+REACT_APP_RU_DATE_FORMAT='DD.MM.YY'
