--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-NODE_ENV=development
+NODE_ENV=production
 
 
 # ---DATA SOURCES---------
-HASURA_ENDPOINT=http://45.10.110.58:11000/v1/graphql
-S3_BUCKET=factory-piek-test
+HASURA_ENDPOINT=http://45.10.110.58:8080/v1/graphql
+S3_BUCKET=piek-factory
 # ------------------------
 
 
@@ -15,7 +15,7 @@ JWT_REFRESH_SECRET_EXPIRES=30d
 
 
 # ENDPOINTS
-CORS_CLIENT_URL=http://localhost:3000
+CORS_CLIENT_URL=https://45.10.110.58:9000
 S3_ENDPOINT=s3.yandexcloud.net
 
 # HASURA GRAPHQL ENGINE
