--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 
 */node_modules/
 # Ignore Mac DS_Store files
-*/.DS_Store
 **/.DS_Store
 client/piek/build/env-config.js
-client/piek/public/env-config.js
-client/piek/public/env-config.js
 .vscode/
 .trunk/out
-*/.env
+*.env
 *.rest
