--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "aws-sdk": "^2.944.0",
-    "boom": "^7.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -20,19 +19,20 @@
     "graphql-request": "^4.3.0",
     "graphql-tag": "^2.12.4",
     "http-errors": "~1.6.3",
-    "jade": "^0.29.0",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.19",
     "querystring": "^0.2.0",
-    "utf8": "^3.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
