renaming and vscode debuger setup

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ chrome-user-data
 *.sublime-workspace
 .idea
 *.iml
-.vscode
 *.swp
 *.swo
 *.sql
@@ -40,4 +39,6 @@ packages/react-devtools-extensions/.tempUserDataDir
 packages/react-devtools-inline/dist
 packages/react-devtools-shell/dist
 packages/react-devtools-timeline/dist
+
+server/dist/
 
