--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
   "name": "piekerp-backend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "dist/server.js",
   "scripts": {
-    "start": "nodemon ./server.js",
-    "dev": "nodemon  --experimental-specifier-resolution=node ./server.ts "
+    "start": "nodemon ./dist/server.js",
+    "dev": "nodemon  --experimental-specifier-resolution=node ./src/server.ts ",
+    "codegen": "graphql-codegen --config codegen.config.ts"
   },
   "dependencies": {
     "aws-sdk": "^2.944.0",
@@ -29,11 +30,16 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.13.8",
+    "@graphql-codegen/typescript": "^2.8.0",
+    "@graphql-codegen/typescript-generic-sdk": "^3.0.3",
+    "@graphql-codegen/typescript-operations": "^2.5.5",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.7",
+    "@types/node-fetch": "^2.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
