--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,4 @@ packages/react-devtools-inline/dist
 packages/react-devtools-shell/dist
 packages/react-devtools-timeline/dist
 
-server/dist/
-
+/server/dist/
