--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
     "start": "node ./dist/server.js",
     "dev": "nodemon  --experimental-specifier-resolution=node ./src/server.ts ",
     "codegen": "graphql-codegen --config codegen.config.ts",
-    "build": "tsc",
-    "start:prod": "tsc && node ./dist/server.js"
+    "build": "tsc"
   },
   "dependencies": {
     "aws-sdk": "^2.944.0",
