--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node ./dist/server.js",
+    "start": "node ./dist/src/server.js",
     "dev": "nodemon  --experimental-specifier-resolution=node ./src/server.ts ",
     "codegen": "graphql-codegen --config codegen.config.ts",
     "build": "tsc"
