--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout to the repository
       - uses: actions/checkout@v2
-      - working-directory: ./client
+      - name: Checkout to the repository
+        working-directory: ./client
         
       - name: Set up NodeJS environment
         uses: actions/setup-node@v2
