--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,7 @@
-name: Docker Image CD
+name: Deploy from main
 
 on:
-  workflow_dispatch:
+  workflow_dispatch
 
 jobs:
   deploy:
@@ -19,4 +19,4 @@ jobs:
       run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
       
     - name: Deploy with rsync
-      run: rsync -avz ./client/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/client
+      run: rsync --archive --compress --progress . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/
