--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,4 +19,4 @@ jobs:
       run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
       
     - name: Deploy with rsync
-      run: rsync --archive --compress --progress . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/
+      run: rsync --archive --compress --progress . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/rsync/
