--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,14 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install SSH Key
-      uses: shimataro/ssh-key-action@v2
-      with:
-        key: ${{ secrets.SSH_HEXCORE_KEY }} 
-        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-        
-    - name: Adding Known Hosts
-      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-      
-    - name: Deploy with rsync
-      run: rsync . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/rsync/
+    - name: Deploy to Staging server
+      uses: easingthemes/ssh-deploy@main
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_HEXCORE_KEY }}
+        ARGS: "-rltgoDzvO"
+        REMOTE_HOST: ${{ secrets.SSH_HOST }}
+        REMOTE_USER: ${{ secrets.SSH_USER }}
+        EXCLUDE: "/dist/, /node_modules/"
