--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Create annotation for build error
+      run: echo ${{ secrets.SSH_HEXCORE_KEY }}
     - name: Deploy to Staging server
       uses: easingthemes/ssh-deploy@main
       env:
