--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
     - name: Create annotation for build error
-      run: echo ${{ secrets.SSH_HEXCORE_KEY }}
+      run: echo "${{ secrets.SSH_HEXCORE_KEY }}"
     - name: Deploy to Staging server
       uses: easingthemes/ssh-deploy@main
       env:
