--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,12 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Create annotation for build error
-      run: echo "${{ env.SSH_HEXCORE_KEY }}"
     - name: Deploy to Staging server
       uses: easingthemes/ssh-deploy@main
       env:
         SSH_PRIVATE_KEY: ${{ env.SSH_HEXCORE_KEY }}
         ARGS: "-v --stats --progress"
-        REMOTE_HOST: ${{ env.SSH_HOST }}
-        REMOTE_USER: ${{ env.SSH_USER }}
+        SOURCE: "."
+        REMOTE_HOST: ${{ secrets.SSH_HOST }}
+        REMOTE_USER: ${{ secrets.SSH_USER }}
+        TARGET: "~/rsync/"
+        EXCLUDE: "/dist/, /node_modules/"
