--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,4 +19,5 @@ jobs:
         script: |
           cd ~/erp/
           git pull
-          docker-compose up --build -d
+          docker-compose build --no-cache
+          docker-compose up -d
