--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,4 +20,5 @@ jobs:
           cd ~/erp/
           git pull
           docker-compose build --no-cache
-          docker-compose up -d
+          docker-compose up -d 
+          docker-compose rm -fs
