--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,7 +19,5 @@ jobs:
         script: |
           cd ~/erp/
           git pull
-          docker-compose build --no-cache
-          docker-compose up -d 
-          docker-compose rm -fs
-          docker image prune
+          docker-compose up -d --force-recreate --build
+          docker rmi $(docker images --filter "dangling=true" -q --no-trunc)
