--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "ts-node ./src/server.ts",
     "dev": "nodemon  --experimental-specifier-resolution=node ./src/server.ts ",
+    "build": "ncc build ./src/server.ts -o dist",
     "codegen": "graphql-codegen --config codegen.config.ts"
   },
   "dependencies": {
@@ -39,6 +40,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.7",
     "@types/node-fetch": "^2.6.2",
+    "@vercel/ncc": "^0.34.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
