--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.1",
     "express-graphql": "^0.12.0",
     "express-validator": "^6.12.0",
+    "find-config": "^1.0.0",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "graphql-tag": "^2.12.4",
