--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,4 +20,4 @@ jobs:
           cd ~/erp/
           git pull
           docker-compose up -d --force-recreate --build
-          docker rmi $(docker images --filter "dangling=true" -q --no-trunc)
+          docker images -q -a | xargs docker inspect --format='{{.Id}}{{range $rt := .RepoTags}} {{$rt}} {{end}}'|grep -v ':'
