--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout the repository
+      uses: actions/checkout@master
+    - name: Generate the artifacts
+      uses: skx/github-action-build@master
+    - name: Upload the artifacts
+      uses: skx/github-action-publish-binaries@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        args: 'example-*'
     - name: Deploy using ssh
       uses: appleboy/ssh-action@master
       with:
