--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,31 +15,31 @@ jobs:
       - name: Checkout to the repository
         uses: actions/checkout@v2
 
-      - name: Set up NodeJS environment
-        uses: actions/setup-node@v2
-        with:
-          # Reads the node version from the .nvmrc file itself
-          # node-version-file: '.nvmrc'
-          # The node version can be hard-coded
-          cache: 'yarn'
-          cache-dependency-path: client/yarn.lock
-          node-version: 16
+      # - name: Set up NodeJS environment
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     # Reads the node version from the .nvmrc file itself
+      #     # node-version-file: '.nvmrc'
+      #     # The node version can be hard-coded
+      #     cache: 'yarn'
+      #     cache-dependency-path: client/yarn.lock
+      #     node-version: 16
 
-      - name: Install client`s package dependencies
-        working-directory: ./client
-        run: yarn install
+      # - name: Install client`s package dependencies
+      #   working-directory: ./client
+      #   run: yarn install
 
-      - name: Create client`s test build
-        working-directory: ./client
-        run: yarn build
+      # - name: Create client`s test build
+      #   working-directory: ./client
+      #   run: yarn build
 
-      # Run test cases and this could ensure minimum coverage as well if set
-      - name: Execute client`s test cases
-        working-directory: ./client
-        run: yarn test
+      # # Run test cases and this could ensure minimum coverage as well if set
+      # - name: Execute client`s test cases
+      #   working-directory: ./client
+      #   run: yarn test
 
       - name: Login to Github container registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
