--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,18 +37,31 @@ jobs:
       # - name: Execute client`s test cases
       #   working-directory: ./client
       #   run: yarn test
+      - name: Build image and save it as tar
+        run: |
+          docker build . piekerp:latest
+          docker save piekerp:latest -o piekerp.tar
 
-      - name: Login to Github container registry
-        uses: docker/login-action@v2
+      - name: Send tar image to the prod host machine
+        uses: appleboy/scp-action@master
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.CR_TOKEN }}
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_HEXCORE_KEY }}
+          port: 22
+          source: piekerp.tar
+          target: ~/piekerp.tar
+      # - name: Login to Github container registry
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.CR_TOKEN }}
 
-      - name: Push image to Github container registry
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ghcr.io/${{ github.repository }}:latest
+      # - name: Push image to Github container registry
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: ghcr.io/${{ github.repository }}:latest
