--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,17 +40,16 @@ jobs:
       - name: Build image and save it as tar
         run: |
           docker build . -t piekerp:latest
-          docker save piekerp:latest -o piekerp.tar
+          docker save -o piekerp-latest.tar piekerp:latest
 
-      - name: Send tar image to the prod host machine
-        uses: appleboy/scp-action@master
+      - name: Send tar image to the prod host machine using rsync
+        uses: appleboy/rsync-action@master
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
+          args: -avz --delete
+          flags: -e
+          src: piekerp.tar
+          dest: ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/piekerp.tar
           key: ${{ secrets.SSH_HEXCORE_KEY }}
-          port: 22
-          source: piekerp.tar
-          target: ~/piekerp.tar
       # - name: Login to Github container registry
       #   uses: docker/login-action@v2
       #   with:
