--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,11 +46,10 @@ jobs:
         uses: burnett01/rsync-deployments@6.0.0
         with:
           switches: -avzr --delete
-          remote_path: ~/
+          remote_path: ~/temp/
           remote_host: ${{ secrets.SSH_HOST }}
           remote_user: ${{ secrets.SSH_USER }}
           remote_key: ${{ secrets.SSH_HEXCORE_KEY }}
-          path: ./piekerp-latest.tar
       # - name: Login to Github container registry
       #   uses: docker/login-action@v2
       #   with:
