--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,15 @@ jobs:
       - name: Checkout to the repository
         uses: actions/checkout@v3
 
+      - name: rsync deployments
+        uses: burnett01/rsync-deployments@6.0.0
+        with:
+          switches: -avzr --delete
+          path: ./client/
+          remote_path: ~/
+          remote_host: ${{ secrets.SSH_HOST }}
+          remote_user: ${{ secrets.SSH_USER }}
+          remote_key: ${{ secrets.SSH_HEXCORE_KEY }}
       # - name: Set up NodeJS environment
       #   uses: actions/setup-node@v2
       #   with:
@@ -37,19 +46,21 @@ jobs:
       # - name: Execute client`s test cases
       #   working-directory: ./client
       #   run: yarn test
-      - name: Build image and save it as tar
-        run: |
-          docker build . -t piekerp:latest
-          docker save -o piekerp-latest.tar piekerp:latest
 
-      - name: Send tar image to the prod host machine using rsync
-        uses: burnett01/rsync-deployments@6.0.0
-        with:
-          switches: -avzr --delete
-          remote_path: ~/temp/
-          remote_host: ${{ secrets.SSH_HOST }}
-          remote_user: ${{ secrets.SSH_USER }}
-          remote_key: ${{ secrets.SSH_HEXCORE_KEY }}
+      # - name: Build image and save it as tar
+      #   run: |
+      #     docker build . -t piekerp:latest
+      #     docker save -o piekerp-latest.tar piekerp:latest
+
+      # - name: Send tar image to the prod host machine using rsync
+      #   uses: burnett01/rsync-deployments@6.0.0
+      #   with:
+      #     switches: -avzr --delete
+      #     remote_path: ~/temp/
+      #     remote_host: ${{ secrets.SSH_HOST }}
+      #     remote_user: ${{ secrets.SSH_USER }}
+      #     remote_key: ${{ secrets.SSH_HEXCORE_KEY }}
+
       # - name: Login to Github container registry
       #   uses: docker/login-action@v2
       #   with:
