--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,13 @@ jobs:
       - name: rsync deployments
         uses: burnett01/rsync-deployments@6.0.0
         with:
-          switches: -avzr --delete
-          path: ./client/
+          switches: -avzr --progress --delete
+          path: ./client/package.json
           remote_path: ~/
           remote_host: ${{ secrets.SSH_HOST }}
           remote_user: ${{ secrets.SSH_USER }}
           remote_key: ${{ secrets.SSH_HEXCORE_KEY }}
+
       # - name: Set up NodeJS environment
       #   uses: actions/setup-node@v2
       #   with:
