--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,14 +16,24 @@ jobs:
         uses: actions/checkout@v3
 
       - name: rsync deployments
-        uses: burnett01/rsync-deployments@6.0.0
-        with:
-          switches: -avzr --progress --delete
-          path: ./client/package.json
-          remote_path: ~/
-          remote_host: ${{ secrets.SSH_HOST }}
-          remote_user: ${{ secrets.SSH_USER }}
-          remote_key: ${{ secrets.SSH_HEXCORE_KEY }}
+        uses: up9cloud/action-rsync@master
+        env:
+          HOST: ${{ secrets.SSH_HOST }}
+          KEY: ${{ secrets.SSH_HEXCORE_KEY }}
+          # PASSWORD: ${{secrets.DEPLOY_SSH_PASSWORD}} # it's less secure, using KEY instead
+          # TARGET: /app/hello-service/
+
+          VERBOSE: true
+          USER: ${{ secrets.SSH_USER }}
+          # PORT: 2222 # no need to set this, because of $SSH_ARGS
+          ARGS: -az --exclude=/.git/
+          # SSH_ARGS: '-p 2222 -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
+          # SOURCE: ./public/
+
+          PRE_SCRIPT: |
+            echo start at:
+            date -u
+          POST_SCRIPT: 'echo done at: && date -u'
 
       # - name: Set up NodeJS environment
       #   uses: actions/setup-node@v2
