--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           USER: ${{ secrets.SSH_USER }}
           # PORT: 2222 # no need to set this, because of $SSH_ARGS
           ARGS: -az --exclude=/.git/
-          # SSH_ARGS: '-p 2222 -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
+          SSH_ARGS: '-p 22 -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
           # SOURCE: ./public/
 
           PRE_SCRIPT: |
