--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.SSH_HEXCORE_KEY }}
+          key: '${{ secrets.SSH_HEXCORE_KEY }}'
           known_hosts: 'placeholder'
 
       - name: Genetate auth known_hosts
-        run: ssh-keyscan -t rsa ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - run: rsync --archive --verbose --compress --progress . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/
       # - name: Set up NodeJS environment
