--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout to the repository
         uses: actions/checkout@v3
 
-      - run: rsync -avz --progress . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/tt
+      - run: rsync -avz . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/tt --progress
       # - name: Set up NodeJS environment
       #   uses: actions/setup-node@v2
       #   with:
