--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,13 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_HEXCORE_KEY }}
-          known_hosts: 'FDSF'
+          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
-      - run: rsync -avz . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/tt --progress
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Deploy with rsync
+        run: rsync -avz ./client/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/tt
       # - name: Set up NodeJS environment
       #   uses: actions/setup-node@v2
       #   with:
