--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,19 @@ jobs:
           name: github-actions
           key: ${{ secrets.SSH_HEXCORE_KEY }}
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+          config: | # will be appended to existing .ssh/config
+            Host piek
+              HostName ${{ secrets.SSH_HOST }}
+              User ${{ secrets.SSH_USER }}
+              IdentityFile ~/.ssh/github-actions
+              Port 22
+              ProxyCommand ssh -W %h:%p bastion
 
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy with rsync
-        run: rsync -avz ./client/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/tt
+        run: rsync -avz ./client/ piek@:~/tt
       # - name: Set up NodeJS environment
       #   uses: actions/setup-node@v2
       #   with:
