--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,18 +22,17 @@ jobs:
           key: ${{ secrets.SSH_HEXCORE_KEY }}
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
           config: | # will be appended to existing .ssh/config
-            Host piek
+            Host target
               HostName ${{ secrets.SSH_HOST }}
               User ${{ secrets.SSH_USER }}
               IdentityFile ~/.ssh/github-actions
               Port 22
-              ProxyCommand ssh -W %h:%p bastion
 
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy with rsync
-        run: rsync -avz ./client/ piek@:~/tt
+        run: rsync -avz ./client/ target@:~/tt
       # - name: Set up NodeJS environment
       #   uses: actions/setup-node@v2
       #   with:
