--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   build:
-    # Defines the type of runner the job runs on
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout to the repository
         uses: actions/checkout@v3
@@ -31,8 +29,10 @@ jobs:
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Deploy with rsync
-        run: rsync -avz ./client/ target@:~/tt
+      - name: Copy to the remoye server using scp
+        run: |
+          scp -r -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/temp
+
       # - name: Set up NodeJS environment
       #   uses: actions/setup-node@v2
       #   with:
