--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Copy to the remoye server using scp
+      - name: Copy to the remoye server using rsync
         run: |
-          scp -r -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/temp
+          rsync -avzr --delete -e "ssh -p 22" --exclude-from 'exclude.txt' . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/temp/
 
       # - name: Set up NodeJS environment
       #   uses: actions/setup-node@v2
