--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,27 +13,27 @@ jobs:
       - name: Checkout to the repository
         uses: actions/checkout@v3
 
-      - name: Install ssh key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          name: github-actions
-          key: ${{ secrets.SSH_HEXCORE_KEY }}
-          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-          config: | # will be appended to existing .ssh/config
-            Host target
-              HostName ${{ secrets.SSH_HOST }}
-              User ${{ secrets.SSH_USER }}
-              IdentityFile ~/.ssh/github-actions
-              Port 22
-              ServerAliveInterval 30
-              ServerAliveCountMax 6
+      # - name: Install ssh key
+      #   uses: shimataro/ssh-key-action@v2
+      #   with:
+      #     name: github-actions
+      #     key: ${{ secrets.SSH_HEXCORE_KEY }}
+      #     known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+      #     config: | # will be appended to existing .ssh/config
+      #       Host target
+      #         HostName ${{ secrets.SSH_HOST }}
+      #         User ${{ secrets.SSH_USER }}
+      #         IdentityFile ~/.ssh/github-actions
+      #         Port 22
+      #         ServerAliveInterval 30
+      #         ServerAliveCountMax 6
 
-      - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+      # - name: Adding Known Hosts
+      #   run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Copy to the remoye server using rsync
-        run: |
-          rsync -avzr --delete -e "ssh -p 22" . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/temp/
+      # - name: Copy to the remoye server using rsync
+      #   run: |
+      #     rsync -avzr --delete -e "ssh -p 22" . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/temp/
 
       # - name: Set up NodeJS environment
       #   uses: actions/setup-node@v2
