--- a/client/package.json
+++ b/client/package.json
@@ -73,6 +73,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@types/axios": "^0.14.0",
+    "@types/react": "^18.2.20",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-table": "^7.7.12",
