--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,11 @@
     "@apollo/react-hooks": "^4.0.0",
     "@emotion/babel-plugin": "^11.9.2",
     "@emotion/babel-preset-css-prop": "^11.2.0",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@iconscout/react-unicons": "^1.1.6",
-    "@mui/material": "^5.10.10",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.8.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
